@@ -23,6 +23,7 @@ Changes for 1.9.0
 
 Changes for 1.8.4rc3
 
+ - [ZBX-3085] fixed possible stop to send data from proxy after shutdown of MySQL server (Sasha)
  - [ZBX-3218] server and proxy are no longer built with libcurl by default (asaveljevs)
  - [ZBX-3145] fixed user macros resolving (Vedmak)
  - [ZBX-3215] fixed filtering by group in trigger selection popup (Vedmak)
